--- a/src/styles/components/Card.css
+++ b/src/styles/components/Card.css
@@ -6,7 +6,6 @@
   margin-bottom: 50px;
   position: relative;
   cursor: pointer;
-  margin: 3px;
 }
 
 .card-cover {
